Site fini avec correction de bugs et ajout des media queries pour adaptation mobile

--- a/css/app.sass
+++ b/css/app.sass
@@ -54,12 +54,7 @@ header
                     opacity: 0.8
                     transform: scale(1.3)
 
-    .menus
-        h2
-            margin: 20px 0
-            text-align: center
-        img
-            box-shadow: 0 0 4px 0 rgba(0, 0, 0, .2)
+@import '_menus'
 
 footer
     margin: 0
